--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@types/node": "20.11.16",
     "@types/react": "18.2.52",
     "@types/react-dom": "18.2.18",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
     "autoprefixer": "10.4.17",
-    "eslint": "9.25.1",
-    "eslint-config-next": "15.3.1",
+    "eslint": "^9.25.1",
+    "eslint-config-next": "^15.3.1",
     "postcss": "8.4.35",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
